Fixed loader visibility

--- a/src/pages/Home/index.scss
+++ b/src/pages/Home/index.scss
@@ -92,7 +92,7 @@
   .loader {
     display: flex;
     justify-content: center;
-    padding: 24px 0;
+    padding: 48px 0;
     img {
       max-width: 100px;
     }
